--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -155,6 +155,7 @@ gap: 8px;
     width: 100%;
     // background-color: red;
     padding-top: 80px;
+    // padding-bottom: 80px;
   }
 .jumbotronContainer{
   margin-top: -80px;
@@ -318,8 +319,10 @@ gap: 8px;
           font-size: 0.9rem;
           font-weight: 700;
           color: $darkGreen;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           width: auto;
-          display: inline-block;
           &:hover{
             background-color: $darkGreen;
             color: white;
@@ -338,64 +341,156 @@ footer{
   color: white;
   font-weight: 600;
 }
-// POP UP
-.overlay {
-  background-color: rgba(0, 0, 0, 0.23);
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  right: 0;
+// DETAIL
 
-  .popUp {
-    width: 750px;
-    height: 400px;
-    background-color: $grey;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 10px;
-    padding: 2.5em;
-    .content {
+    #detailContent {
       width: 100%;
-      height: 100%;
+      padding: 0 10em;
+      padding-top: 4em;
       overflow: hidden;
-      display: flex;
-      .img{
-        width : 50%;
-        height: fit-content;
-        img{
-          border-radius: 20px;
-          width: 100%;
+      .detailHead{
+        display: flex;
+        .img{
+          width : 40%;
+          height: fit-content;
+          img{
+            border-radius: 20px;
+            width: 100%;
+          }
+          .detailButtonArea{
+            margin-top: 20px;
+            width: 100%;
+            height: 40px;
+            display: flex;
+            gap: 5px;
+            font-size: 0.9rem;
+            a,.addToFavorite{
+              outline: none;
+              background-color: transparent;
+              border: 3px solid $darkGreen;
+              cursor: pointer;
+              font-weight: 600;
+              color: $darkGreen;
+              &:hover{
+                background-color: $darkGreen;
+                color: white;
+              }
+            }
+            a{
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 50%;
+              border-top-left-radius: 30%;
+              border-bottom-left-radius: 30%;
+              border-top-right-radius: 5px;
+              border-bottom-right-radius: 5px;
+              font-size: inherit;
+              color: $darkGreen
+            }
+            .addToFavorite{
+              width: 50%;
+              font-size: inherit;
+              border-top-right-radius: 30%;
+              border-bottom-right-radius: 30%;
+              border-top-left-radius: 5px;
+              border-bottom-left-radius: 5px;
+            }
+          }
+        }
+        .details{
+          padding-left: 30px;
+          flex: 1 1 70%;
+          overflow:auto;
+          .restaurantName {
+            display: inline;
+            color: $darkGreen;
+            text-shadow: 0px 1px rgba(110, 108, 108, 0.525);
+            width: 100px;
+            font-size: 2rem;
+          }
+          .starsArea{
+            margin: 5px 0;
+          }
+          h3{
+            font-size: 1.2rem;
+            font-weight: 500;
+          }
+          .restaurantLocation{
+            font-weight: 700;
+            color: $lightGreen;
+          }
+          .restaurantDesc{
+            color: $darkGreen;
+            margin-top: 10px;
+            text-align: justify;
+          }
         }
       }
-      .details{
-        padding-left: 30px;
-        flex: 1 1 70%;
-        overflow:auto;
-        .restaurantName {
-          display: inline;
-          color: $darkGreen;
-          text-shadow: 0px 1px rgba(110, 108, 108, 0.525);
-          width: 100px;
-          font-size: 2rem;
-        }
-        .starsArea{
-          margin: 5px 0;
-        }
+      .menuAndReviewContainer{
+        gap: 70px;
+        margin-top: 30px;
+        display: flex;
+        justify-content: space-between;
+      }
+      .menu{
+        display: flex;
+        justify-content: center;
+        gap: 4em;
         h3{
-          font-size: 1.2rem;
-          font-weight: 500;
-        }
-        .restaurantLocation{
-          font-weight: 700;
-          color: $lightGreen;
-        }
-        .restaurantDesc{
           color: $darkGreen;
-          margin-top: 10px;
+          margin-bottom: 15px;
+          font-size: 1.5rem;
+          text-align: center;
+        }
+        ul{
+          padding-left: 15px;          
+          margin-top: 5px;
+          li{
+            font-size: 1.2rem;
+            color: $darkGreen;
+            font-weight: 500;
+            list-style-position: inside;
+          }
+        }
+      }
+      .reviewContainer{
+        flex: 1 1 50%;
+        h2{
+          font-size: 1.5rem;
+          text-align: center;
+          color: $darkGreen;
+        }
+        review-list{
+          margin-top: 20px;
+          width: 100%;
+          height: 400px;
+          padding: 0 0.3em;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          overflow: scroll;
+          review-item{
+            padding: 1em 1em;
+            width: 100%;
+            border: 3px solid $orange;
+            border-radius: 5px;
+            .reviewHead{
+              font-size: 1rem;
+              font-weight: 500;
+              color: $lightGreen;
+              span{
+                font-weight: 300;
+                color: black;
+                font-size: .9rem;
+              }
+            }
+            .reviewText{
+              font-size: 1rem;
+              margin-top: 5px;
+              font-weight: 500;
+            }
+          }
         }
       }
     }
@@ -415,8 +510,6 @@ footer{
         color: $orange;
       }
     }
-  }
-}
 
 
 @keyframes showNavigation {
