loader done, add review done

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,6 +50,9 @@
       </div>
     </section> -->
   </main>
+  <div class="overlay">
+    <div class="loader"></div>
+  </div>
   <footer id="footer">
     <p>Copyright @ 2020 - Hungers</p>
     <!-- <iconify-icon icon="ic:baseline-search"></iconify-icon> -->
