--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -128,7 +128,6 @@ gap: 8px;
   font-weight: 700;
   margin-top: 5px;
 }
-
 }
 .skip-link{
   position: absolute;
@@ -150,7 +149,7 @@ gap: 8px;
   top: 0px;
 }
 
-  #main{
+#main{
     min-height: 93vh;
     width: 100%;
     // background-color: red;
@@ -246,7 +245,7 @@ gap: 8px;
     gap: 10px;
     row-gap: 50px;
     flex-wrap: wrap;
-    .empty{
+    .notFound{
       color: $lightGreen;
       font-weight: 500;
       font-style: italic;
@@ -328,7 +327,7 @@ gap: 8px;
             color: white;
           }
         }
-      }
+    }
     }
   }
 footer{
@@ -342,174 +341,292 @@ footer{
   font-weight: 600;
 }
 // DETAIL
-
-    #detailContent {
+#detailContent {
+  width: 100%;
+  padding: 0 10em;
+  padding-top: 4em;
+  overflow: hidden;
+  padding-bottom: 80px;
+  .detailHead{
+    display: flex;
+    .img{
+      width : 40%;
+      height: fit-content;
+      img{
+        border-radius: 20px;
+        width: 100%;
+      }
+      .detailButtonArea{
+        margin-top: 20px;
+        width: 100%;
+        height: 40px;
+        display: flex;
+        gap: 5px;
+        font-size: 0.9rem;
+        a,.addToFavorite{
+          outline: none;
+          background-color: transparent;
+          border: 3px solid $darkGreen;
+          cursor: pointer;
+          font-weight: 600;
+          color: $darkGreen;
+          &:hover{
+            background-color: $darkGreen;
+            color: white;
+          }
+        }
+        a{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 50%;
+          border-top-left-radius: 30%;
+          border-bottom-left-radius: 30%;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
+          font-size: inherit;
+          color: $darkGreen
+        }
+        .addToFavorite{
+          width: 50%;
+          font-size: inherit;
+          border-top-right-radius: 30%;
+          border-bottom-right-radius: 30%;
+          border-top-left-radius: 5px;
+          border-bottom-left-radius: 5px;
+        }
+      }
+    }
+    .details{
+      padding-left: 30px;
+      flex: 1 1 70%;
+      overflow:auto;
+      .restaurantName {
+        display: inline;
+        color: $darkGreen;
+        text-shadow: 0px 1px rgba(110, 108, 108, 0.525);
+        width: 100px;
+        font-size: 2rem;
+      }
+      .starsArea{
+        margin: 5px 0;
+      }
+      h3{
+        font-size: 1.2rem;
+        font-weight: 500;
+      }
+      .restaurantLocation{
+        font-weight: 700;
+        color: $lightGreen;
+      }
+      .restaurantDesc{
+        color: $darkGreen;
+        margin-top: 10px;
+        text-align: justify;
+      }
+    }
+  }
+  .menuAndReviewContainer{
+    gap: 70px;
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu{
+    display: flex;
+    justify-content: center;
+    gap: 4em;
+    h3{
+      color: $darkGreen;
+      margin-bottom: 15px;
+      font-size: 1.5rem;
+      text-align: center;
+    }
+    ul{
+      padding-left: 15px;          
+      margin-top: 5px;
+      li{
+        font-size: 1.2rem;
+        color: $darkGreen;
+        font-weight: 500;
+        list-style-position: inside;
+      }
+    }
+  }
+  .reviewContainer{
+    flex: 1 1 50%;
+    h2{
+      font-size: 1.5rem;
+      text-align: center;
+      color: $darkGreen;
+    }
+    review-list{
+      margin-top: 20px;
       width: 100%;
-      padding: 0 10em;
-      padding-top: 4em;
-      overflow: hidden;
-      .detailHead{
-        display: flex;
-        .img{
-          width : 40%;
-          height: fit-content;
-          img{
-            border-radius: 20px;
-            width: 100%;
-          }
-          .detailButtonArea{
-            margin-top: 20px;
-            width: 100%;
-            height: 40px;
-            display: flex;
-            gap: 5px;
-            font-size: 0.9rem;
-            a,.addToFavorite{
-              outline: none;
-              background-color: transparent;
-              border: 3px solid $darkGreen;
-              cursor: pointer;
-              font-weight: 600;
-              color: $darkGreen;
-              &:hover{
-                background-color: $darkGreen;
-                color: white;
-              }
-            }
-            a{
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              width: 50%;
-              border-top-left-radius: 30%;
-              border-bottom-left-radius: 30%;
-              border-top-right-radius: 5px;
-              border-bottom-right-radius: 5px;
-              font-size: inherit;
-              color: $darkGreen
-            }
-            .addToFavorite{
-              width: 50%;
-              font-size: inherit;
-              border-top-right-radius: 30%;
-              border-bottom-right-radius: 30%;
-              border-top-left-radius: 5px;
-              border-bottom-left-radius: 5px;
-            }
+      height: 400px;
+      padding: 0 0.3em;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      overflow: scroll;
+      review-item{
+        padding: 1em 1em;
+        width: 100%;
+        border: 3px solid $orange;
+        border-radius: 5px;
+        .reviewHead{
+          font-size: 1rem;
+          font-weight: 500;
+          color: $lightGreen;
+          span{
+            font-weight: 300;
+            color: black;
+            font-size: .9rem;
           }
         }
-        .details{
-          padding-left: 30px;
-          flex: 1 1 70%;
-          overflow:auto;
-          .restaurantName {
-            display: inline;
-            color: $darkGreen;
-            text-shadow: 0px 1px rgba(110, 108, 108, 0.525);
-            width: 100px;
-            font-size: 2rem;
-          }
-          .starsArea{
-            margin: 5px 0;
-          }
-          h3{
-            font-size: 1.2rem;
-            font-weight: 500;
-          }
-          .restaurantLocation{
-            font-weight: 700;
-            color: $lightGreen;
-          }
-          .restaurantDesc{
-            color: $darkGreen;
-            margin-top: 10px;
-            text-align: justify;
-          }
-        }
-      }
-      .menuAndReviewContainer{
-        gap: 70px;
-        margin-top: 30px;
-        display: flex;
-        justify-content: space-between;
-      }
-      .menu{
-        display: flex;
-        justify-content: center;
-        gap: 4em;
-        h3{
-          color: $darkGreen;
-          margin-bottom: 15px;
-          font-size: 1.5rem;
-          text-align: center;
-        }
-        ul{
-          padding-left: 15px;          
+        .reviewText{
+          font-size: 1rem;
           margin-top: 5px;
-          li{
-            font-size: 1.2rem;
-            color: $darkGreen;
-            font-weight: 500;
-            list-style-position: inside;
-          }
+          font-weight: 500;
         }
       }
-      .reviewContainer{
-        flex: 1 1 50%;
-        h2{
-          font-size: 1.5rem;
-          text-align: center;
-          color: $darkGreen;
-        }
-        review-list{
-          margin-top: 20px;
-          width: 100%;
-          height: 400px;
-          padding: 0 0.3em;
+      form{
+        // background-color: blue;
+        display: flex; 
+        justify-content: space-between;
+        gap: 20px;
+        .inputArea{
+          // background-color: red;
           display: flex;
           flex-direction: column;
+          flex: 1;
           gap: 10px;
-          overflow: scroll;
-          review-item{
-            padding: 1em 1em;
-            width: 100%;
-            border: 3px solid $orange;
+          input{
+            border: 2px solid $darkGreen;
+            padding: 10px 20px;
+            // border-radius: 50%;
             border-radius: 5px;
-            .reviewHead{
-              font-size: 1rem;
-              font-weight: 500;
-              color: $lightGreen;
-              span{
-                font-weight: 300;
-                color: black;
-                font-size: .9rem;
-              }
-            }
-            .reviewText{
-              font-size: 1rem;
-              margin-top: 5px;
-              font-weight: 500;
+            height: 40px;
+            padding-left: 1em;
+            color: $darkGreen;
+            font-weight: 600;
+            
+            &::placeholder{
+              color: $darkGreen;
+              font-weight: 400;
             }
           }
+          #reviewText{
+            height: 50px;
+          }
+          // height: 200px;
+        }
+        button{
+          cursor: pointer;
+          outline: none;
+          background-color: $darkGreen;
+          color: white;
+          font-weight: 600;
+          border: none;
+          width: 100px;
+          height: 40px;
+          border-radius: 5px;
         }
       }
     }
-    .closeButton {
-      position: absolute;
-      top: 15px;
-      right: 15px;
-      cursor: pointer;
-      width: 35px;
-      height: 35px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    
-      iconify-icon{
-        font-size: 2.5rem;
-        color: $orange;
-      }
-    }
+  }
+}
+.closeButton {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  iconify-icon{
+    font-size: 2.5rem;
+    color: $orange;
+  }
+}
+
+
+// OVERLAY
+.overlay{
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.278);
+}
+
+// LOADER
+.loader,
+.loader:before,
+.loader:after {
+  background: #ffffff;
+  -webkit-animation: load1 1s infinite ease-in-out;
+  animation: load1 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+}
+.loader {
+  color: #ffffff;
+  text-indent: -9999em;
+  margin: 88px auto;
+  position: relative;
+  font-size: 11px;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+  position: absolute;
+  top: 0;
+  content: '';
+}
+.loader:before {
+  left: -1.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 1.5em;
+}
+@-webkit-keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
+@keyframes load1 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 0;
+    height: 4em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 5em;
+  }
+}
 
 
 @keyframes showNavigation {
