--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Hunger Apps">
-  <link rel="icon" href="./logoIcon.png">
+  <meta name="theme-color" content="#f69435"/>
+  <link rel="manifest" href="./app.webmanifest">
+  <link rel="icon" href="./icons/logoIcon.png">
+  <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
