--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -235,100 +235,101 @@ gap: 8px;
       }
     }
   }
-  .restaurants{
-    display: flex;
-    justify-content: space-around;
-    padding: 5px;
-    margin-top: 3em;
-    width: 100%;
-    height: auto;
-    gap: 10px;
-    row-gap: 50px;
-    flex-wrap: wrap;
-    .notFound{
-      color: $lightGreen;
-      font-weight: 500;
-      font-style: italic;
-    }
-    .restaurant-item{
-      border-top-right-radius: 20px;
-      border-top-left-radius: 20px;
-      background-color: $white;
+}
+// restaurantList
+restaurant-list{
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+  margin-top: 3em;
+  width: 100%;
+  height: auto;
+  gap: 10px;
+  row-gap: 50px;
+  flex-wrap: wrap;
+  .notFound{
+    color: $lightGreen;
+    font-weight: 500;
+    font-style: italic;
+  }
+  .restaurant-item{
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    background-color: $white;
+    overflow: hidden;
+    width: 260px;
+    height: 420px;
+    box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.15);
+    .imgArea{
+      position: relative;
+      width: 100%;
+      height: 45%;
+      background-color: rgba(0, 0, 0, 0.34);
       overflow: hidden;
-      width: 260px;
-      height: 420px;
-      box-shadow: 2px 4px 20px rgba(0, 0, 0, 0.15);
-      .imgArea{
-        position: relative;
-        width: 100%;
-        height: 45%;
-        background-color: rgba(0, 0, 0, 0.34);
-        overflow: hidden;
-        img{
-          height: 100%;
-        }
-        .restaurantLoc{
-          font-size: 1rem;
-          width: auto;
-          top: 10%;
-          padding: 5px 20px;
-          position: absolute;
-          background-color: 	rgba(245,245,245,0.8);
-          border-top-right-radius: 6px;
-          border-bottom-right-radius: 6px;
-          color: $darkGreen;
-          font-weight: 700;
+      img{
+        height: 100%;
+      }
+      .restaurantLoc{
+        font-size: 1rem;
+        width: auto;
+        top: 10%;
+        padding: 5px 20px;
+        position: absolute;
+        background-color: 	rgba(245,245,245,0.8);
+        border-top-right-radius: 6px;
+        border-bottom-right-radius: 6px;
+        color: $darkGreen;
+        font-weight: 700;
+      }
+    }
+    .descriptionArea{
+      height: 55%;
+      padding: 1em;
+      display: flex;
+      flex-direction: column;
+      .restaurantName{
+        text-align: center;
+        background-color: $lightGreen;
+        color: white;
+        padding: 0.3em 1em;
+        margin: 0 auto;
+        font-size: 1.3rem;
+        margin-top: -35px;
+        z-index: 1;
+        border-radius: 10px;
+        width: auto;
+      }
+      }
+      .description{
+        flex-grow: 0;
+        margin-top: 5px;
+        font-size: 1rem;
+        max-height: 50%;
+        font-weight: 400;
+        text-align: justify;
+        color: $lightGreen;
+        overflow: auto;
+      }
+      .detailsButton{
+        cursor: pointer;
+        flex: 1 0 44px;
+        margin-top: 10px;
+        outline: none;
+        border: 3px solid $darkGreen;
+        border-radius: 10px;
+        font-size: 0.9rem;
+        font-weight: 700;
+        color: $darkGreen;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: auto;
+        &:hover{
+          background-color: $darkGreen;
+          color: white;
         }
       }
-      .descriptionArea{
-        height: 55%;
-        padding: 1em;
-        display: flex;
-        flex-direction: column;
-        .restaurantName{
-          text-align: center;
-          background-color: $lightGreen;
-          color: white;
-          padding: 0.3em 1em;
-          margin: 0 auto;
-          font-size: 1.3rem;
-          margin-top: -35px;
-          z-index: 1;
-          border-radius: 10px;
-          width: auto;
-        }
-        }
-        .description{
-          flex-grow: 0;
-          margin-top: 5px;
-          font-size: 1rem;
-          max-height: 50%;
-          font-weight: 400;
-          text-align: justify;
-          color: $lightGreen;
-          overflow: auto;
-        }
-        .detailsButton{
-          cursor: pointer;
-          flex: 1 0 44px;
-          margin-top: 10px;
-          outline: none;
-          border: 3px solid $darkGreen;
-          border-radius: 10px;
-          font-size: 0.9rem;
-          font-weight: 700;
-          color: $darkGreen;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: auto;
-          &:hover{
-            background-color: $darkGreen;
-            color: white;
-          }
-        }
-    }
-    }
+  }
   }
 footer{
   width: 100%;
@@ -363,7 +364,8 @@ footer{
         display: flex;
         gap: 5px;
         font-size: 0.9rem;
-        a,.addToFavorite{
+        // background-color: red;
+        a,.likeOrLikedButton .addToFavorite{
           outline: none;
           background-color: transparent;
           border: 3px solid $darkGreen;
@@ -387,32 +389,38 @@ footer{
           font-size: inherit;
           color: $darkGreen
         }
-        .addToFavorite{
+        .likeOrLikedButton{
           width: 50%;
-          font-size: inherit;
-          border-top-right-radius: 30px;
-          border-bottom-right-radius: 30px;
-          border-top-left-radius: 5px;
-          border-bottom-left-radius: 5px;
-        }
-        .removeFromFavorite{
-          outline: none;
-          background-color: $darkGreen;
-          border: none;
-          cursor: pointer;
-          font-weight: 600;
-          color: $darkGreen;
-          color: white;
-          &:hover{
-            background-color: $lightGreen;
-            color: white;
+          // background-color: aqua;
+          .addToFavorite{
+            height: 100%;
+            width: 100%;
+            font-size: inherit;
+            border-top-right-radius: 30px;
+            border-bottom-right-radius: 30px;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
           }
-          width: 50%;
-          font-size: inherit;
-          border-top-right-radius: 30px;
-          border-bottom-right-radius: 30px;
-          border-top-left-radius: 5px;
-          border-bottom-left-radius: 5px;
+          .removeFromFavorite{
+            width: 100%;
+            height: 100%;
+            outline: none;
+            background-color: $darkGreen;
+            border: none;
+            cursor: pointer;
+            font-weight: 600;
+            color: $darkGreen;
+            color: white;
+            &:hover{
+              background-color: $lightGreen;
+              color: white;
+            }
+            font-size: inherit;
+            border-top-right-radius: 30px;
+            border-bottom-right-radius: 30px;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+          }
         }
       }
     }
@@ -570,6 +578,14 @@ footer{
     font-size: 2.5rem;
     color: $orange;
   }
+}
+
+// Favorites
+#favorites{
+  // background-color: red;
+  padding: 0 10em;
+  padding-top: 3em;
+  width: 100%;
 }
 
 
