--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,6 +16,7 @@
   <title>Hunger Apps</title>
 </head>
 <body>
+  <a href="#main" class="skip-link" tabindex="1">Skip to content</a>
   <header id="header">
     <div class="imgLogo">
       <img alt="Ini adalah sebuah Logo dari Hungers" src="./hungersLogo.png">
@@ -32,7 +33,6 @@
     </button>
   </header>
   <main id="main">
-<!-- <section class="jumbotronContainer">
       <div class="container">
         <div class="textContent">
           <h1>Hungers</h1>
