--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -81,7 +81,7 @@ header{
     }
   }
   .transformButton{
-    background-color: red;
+    // background-color: red;
     span:nth-child(1){
         transform-origin:bottom;
         transform:rotatez(45deg) translate(6px,0px)
@@ -131,9 +131,7 @@ gap: 8px;
 }
 .skip-link{
   position: absolute;
-  // width: 100px;
   padding: 10px 20px;
-  // height: 200px;
   top: -50px;
   left: 50%;
   transform: translateX(-50%);
@@ -150,11 +148,10 @@ gap: 8px;
 }
 
 #main{
+  // background-color: $grey;
     min-height: 93vh;
     width: 100%;
-    // background-color: red;
     padding-top: 80px;
-    // padding-bottom: 80px;
   }
 .jumbotronContainer{
   margin-top: -80px;
@@ -252,7 +249,7 @@ restaurant-list{
     font-weight: 500;
     font-style: italic;
   }
-  .restaurant-item{
+  restaurant-item{
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     background-color: $white;
@@ -364,7 +361,6 @@ footer{
         display: flex;
         gap: 5px;
         font-size: 0.9rem;
-        // background-color: red;
         a,.likeOrLikedButton .addToFavorite{
           outline: none;
           background-color: transparent;
@@ -391,7 +387,6 @@ footer{
         }
         .likeOrLikedButton{
           width: 50%;
-          // background-color: aqua;
           .addToFavorite{
             height: 100%;
             width: 100%;
@@ -518,12 +513,10 @@ footer{
         }
       }
       form{
-        // background-color: blue;
         display: flex; 
         justify-content: space-between;
         gap: 20px;
         .inputArea{
-          // background-color: red;
           display: flex;
           flex-direction: column;
           flex: 1;
@@ -531,7 +524,6 @@ footer{
           input{
             border: 2px solid $darkGreen;
             padding: 10px 20px;
-            // border-radius: 50%;
             border-radius: 5px;
             height: 40px;
             padding-left: 1em;
@@ -546,7 +538,6 @@ footer{
           #reviewText{
             height: 50px;
           }
-          // height: 200px;
         }
         button{
           cursor: pointer;
@@ -582,12 +573,39 @@ footer{
 
 // Favorites
 #favorites{
-  // background-color: red;
-  padding: 0 10em;
-  padding-top: 3em;
+  background-color: $grey;
+  padding: 3em 10em;
   width: 100%;
+  min-height: 100vh;
+  .subHeading{
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 2.1rem;
+  }
 }
-
+// notFound
+.notFoundContainer{
+  // background-color: red;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  // justify-content: center;
+  flex-direction: column;
+  margin-top: 8em;
+  
+  h2{
+    font-size: 16rem;
+    font-weight: 800;
+    color: $darkGreen;
+    text-shadow: 2px 2px 5px black;
+  }
+  h4{
+    font-size: 2rem;
+    color: $orange;
+  }
+}
 
 // OVERLAY
 .overlay{
