harusnya uda beres

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -19,7 +19,7 @@
   <a href="#main" class="skip-link" tabindex="1">Skip to content</a>
   <header id="header">
     <div class="imgLogo">
-      <img alt="Ini adalah sebuah Logo dari Hungers" src="./hungersLogo.png">
+      <img alt="Ini adalah sebuah Logo dari Hungers" src="./images/hungersLogo.png">
     </div>
     <nav id="nav">
       <a href="/">Home</a>
